--- a/doom/.doom.d/README.org
+++ b/doom/.doom.d/README.org
@@ -48,6 +48,7 @@ brew tap d12frosted/emacs-plus
 brew install emacs-plus --with-native-comp --with-modern-doom3-icon
 cp -r /opt/homebrew/opt/emacs-plus/Emacs.app /Applications/
 #+end_src
+
 - ~emacs~ formula is another acceptable option but does ~not~ provide a ~Emacs.app~.
 
 *** DOOM EMACS
@@ -113,15 +114,19 @@ git clone https://github.com/hlissner/doom-emacs ~/.emacs.d
 (use-package modus-themes
   :ensure t
   :custom
+  (modus-themes-bold-constructs t)
   (modus-themes-italic-constructs t)
-  (modus-themes-bold-constructs nil)
   (modus-themes-mixed-fonts t)
+  (modus-themes-prompts '(italic bold))
+  (modus-themes-completions '((matches . (extrabold))
+                              (selection . (semibold underline))))
   (modus-themes-org-blocks 'gray-background)
-  (modus-themes-completions '((t . (extrabold))))
   (modus-themes-headings
-   '((agenda-structure . (variable-pitch light 2.2))
-     (agenda-date . (variable-pitch regular 1.3))
-     (t . (regular 1.15))))
+   '((1 . (variable-pitch 1.5))
+     (2 . (1.3))
+     (agenda-date . (1.3))
+     (agenda-structure . (variable-pitch light 2))
+     (t . (1.1))))
   :init
   (load-theme 'modus-vivendi t))
 #+end_src
@@ -165,7 +170,7 @@ git clone https://github.com/hlissner/doom-emacs ~/.emacs.d
       doom-modeline-bar-width 4))
 #+end_src
 
-*** CONFIGURE CENTAUR-TABS
+*** CENTAUR-TABS
 #+begin_src emacs-lisp :tangle "config.el"
 (setq centaur-tabs-default-font "Iosevka NF"
       centaur-tabs-set-bar 'right
@@ -179,7 +184,7 @@ git clone https://github.com/hlissner/doom-emacs ~/.emacs.d
 #+end_src
 
 *** ORG-AUTO-TANGLE
-The ~org-auto-tangle~ package automatically tangle org files on save. This is achieved by adding the option ~#+auto_tangle: t~.
+The ~org-auto-tangle~ package automatically tangle org files on save. This is achieved by adding the option ~#+auto_tangle: t~. If instead you would like to manually tangle the org file on save, the following emacs keybindings can be used ~C-c C-v C-t~
 
 The tangling process happens asynchronously, therefore it will not block the current emacs session.
 #+begin_src emacs-lisp :tangle "config.el"
@@ -222,7 +227,6 @@ The tangling process happens asynchronously, therefore it will not block the cur
       org-ellipsis " ▼ "
       org-hide-emphasis-markers t
       org-hide-leading-stars t
-      org-indent-mode nil
       org-insert-heading-respect-content t
       org-log-done t
       org-pretty-entities t
@@ -256,7 +260,11 @@ The ~org modern~ package implements a modern style for Org buffers using font lo
 #+begin_src emacs-lisp :tangle "config.el"
 (require 'ox-latex)
 
-(setq org-latex-pdf-process (list "latexmk -pdflatex='xelatex -shell-escape -interaction nonstopmode' -pdf -output-directory=%o %f"))
+;; Set LaTeX compiler to XeLaTeX
+(add-hook! 'latex-mode-hook
+  (setq TeX-engine 'xelatex) 99)
+
+;;(setq org-latex-pdf-process (list "latexmk -pdflatex='xelatex -shell-escape -interaction nonstopmode' -pdf -output-directory=%o %f"))
 
 (with-eval-after-load 'ox-latex
   (add-to-list 'org-latex-classes
@@ -270,30 +278,14 @@ The ~org modern~ package implements a modern style for Org buffers using font lo
                  )))
 #+end_src
 
-*** ORG-REVEAL
-~org-reveal~ exports ~org~ documents to ~reveal.js~ presentations.
+*** PDF-TOOLS
 #+begin_src emacs-lisp :tangle "config.el"
-(use-package ox-reveal)
-(setq org-reveal-root "https://cdn.jsdelivr.net/npm/reveal.js")
-#+end_src
-
-*** PDF
-#+begin_src emacs-lisp :tangle "config.el"
-(use-package pdf-tools
-  :defer t
-  :commands (pdf-loader-install)
-  :mode "\\.pdf\\'"
-  :bind (:map pdf-view-mode-map
-              ("j" . pdf-view-next-line-or-next-page)
-              ("k" . pdf-view-previous-line-or-previous-page))
-  :init (pdf-loader-install)
-  :config (add-to-list 'revert-without-query ".pdf"))
-
-(add-hook 'pdf-view-mode-hook #'(lambda () (interactive) (display-line-numbers-mode -1)))
+;; Automatically update buffer
+(setq auto-revert-interval 0.5)
 #+end_src
 
 *** VERTICO
-Ther ~vertico~ package provides a performant and minimalistic vertical completion IO based on the default completion system.
+The ~vertico~ package provides a performant and minimalistic vertical completion IO based on the default completion system.
 #+begin_src emacs-lisp :tangle "config.el"
 (use-package vertico
   :init
@@ -335,6 +327,64 @@ This package provides an ~orderless~ completion style that divides the pattern i
   (completion-category-overrides '((file (styles partial-completion)))))
 #+end_src
 
+*** CONSULT
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package consult
+  :ensure t
+  :custom
+  (completion-in-region-function #'consult-completion-in-region))
+#+end_src
+
+*** CORFU
+Corfu completion module
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package corfu
+  :custom
+  (corfu-separator ?\s)          ;; Orderless field separator
+  (corfu-preview-current t)    ;; Disable current candidate preview
+  (corfu-auto nil)
+  (corfu-on-exact-match nil)
+  (corfu-quit-no-match 'separator)
+  (corfu-preselect-first nil)
+  :hook
+  (doom-first-buffer . global-corfu-mode)
+  :bind (:map corfu-map
+         ("SPC" . corfu-insert-separator)
+         ("TAB" . corfu-next)
+         ([tab] . corfu-next)
+         ("S-TAB" . corfu-previous)
+         ([backtab] . corfu-previous)))
+#+end_src
+
+*** CAPE
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package cape
+  :defer t
+  :init
+  (add-to-list 'completion-at-point-functions #'cape-file-capf)
+  (add-to-list 'completion-at-point-functions #'cape-dabbrev-capf)
+  (add-to-list 'completion-at-point-functions #'cape-keyword-capf))
+
+(setq completion-cycle-threshold 1)
+
+;; Enable indentation+completion using the TAB key.
+;; Completion is often bound to M-TAB.
+(setq tab-always-indent 'complete)
+#+end_src
+
+*** EMBARK
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package embark
+  :ensure t
+  :init
+  (setq prefix-help-command #'embark-prefix-help-command))
+
+(use-package embark-consult
+  :ensure t
+  :hook
+  (embark-collect-mode . consult-preview-at-point-mode))
+#+end_src
+
 -----
 
 ** INIT.EL
@@ -356,11 +406,11 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        ;;layout            ; auie,ctsrnm is the superior home row
 
        :completion
-       ;; company           ; the ultimate code completion backend
+       ;;company           ; the ultimate code completion backend
        ;;helm              ; the *other* search engine for love and life
        ;;ido               ; the other *other* search engine...
        ;;ivy               ; a search engine for love and life
-       vertico           ; the search engine of the future
+       (vertico +orderless +icons)           ; the search engine of the future
 
        :ui
        ;;deft              ; notational velocity for Emacs
@@ -415,7 +465,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        vterm             ; the best terminal emulation in Emacs
 
        :checkers
-       syntax              ; tasing you for every semicolon you forget
+       (syntax +childframe)              ; tasing you for every semicolon you forget
        ;;(spell +flyspell) ; tasing you for misspelling mispelling
        ;;grammar           ; tasing grammar mistake every you make
 
@@ -431,7 +481,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        (eval +overlay)     ; run code, run (also, repls)
        ;;gist              ; interacting with github gists
        lookup              ; navigate your code and its documentation
-       lsp               ; M-x vscode
+       (lsp +eglot)               ; M-x vscode
        magit             ; a git porcelain for Emacs
        ;;make              ; run make tasks from Emacs
        ;;pass              ; password manager for nerds
@@ -446,7 +496,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
 
        :os
        (:if IS-MAC macos)  ; improve compatibility with macOS
-       ;;tty               ; improve the terminal Emacs experience
+       tty               ; improve the terminal Emacs experience
 
        :lang
        ;;agda              ; types of types of types of types...
@@ -481,7 +531,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        ;;javascript        ; all(hope(abandon(ye(who(enter(here))))))
        ;;julia             ; a better, faster MATLAB
        ;;kotlin            ; a better, slicker Java(Script)
-       (latex +latexmk)             ; writing papers in Emacs has never been so fun
+       (latex +latexmk +lsp +fold)             ; writing papers in Emacs has never been so fun
        ;;lean              ; for folks with too much to prove
        ;;ledger            ; be audit you can be
        ;;lua               ; one-based indices? one-based indices
@@ -489,27 +539,27 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        ;;nim               ; python + lisp at the speed of c
        ;;nix               ; I hereby declare "nix geht mehr!"
        ;;ocaml             ; an objective camel
-       org               ; organize your plain life in plain text
+       (org +hugo +present)              ; organize your plain life in plain text
        ;;php               ; perl's insecure younger brother
        ;;plantuml          ; diagrams for confusing people more
        ;;purescript        ; javascript, but functional
-       ;;python            ; beautiful is better than ugly
+       (python +tree-sitter)            ; beautiful is better than ugly
        ;;qt                ; the 'cutest' gui framework ever
        ;;racket            ; a DSL for DSLs
        ;;raku              ; the artist formerly known as perl6
        ;;rest              ; Emacs as a REST client
        ;;rst               ; ReST in peace
        ;;(ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}
-       ;;(rust +lsp)       ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
+       (rust +lsp +tree-sitter)       ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
        ;;scala             ; java, but good
        ;;(scheme +guile)   ; a fully conniving family of lisps
-       sh                ; she sells {ba,z,fi}sh shells on the C xor
+       (sh +fish +tree-sitter)               ; she sells {ba,z,fi}sh shells on the C xor
        ;;sml
        ;;solidity          ; do you need a blockchain? No.
        ;;swift             ; who asked for emoji variables?
        ;;terra             ; Earth and Moon in alignment for performance.
        ;;web               ; the tubes
-       ;;yaml              ; JSON, but readable
+       yaml              ; JSON, but readable
        ;;zig               ; C, but simpler
 
        :email
@@ -570,10 +620,11 @@ Doom's packages are pinned to a specific commit and updated from release to rele
 
 #+begin_src emacs-lisp :tangle "packages.el"
 (package! beacon)
+(package! cape)
+(package! corfu)
 (package! org-alert)
 (package! org-auto-tangle)
 (package! org-modern)
-(package! ox-reveal)
 (package! nerd-icons-completion)
 (package! nerd-icons-corfu)
 (package! nerd-icons-dired)
