refactor doom emacs completion

--- a/doom/.doom.d/README.org
+++ b/doom/.doom.d/README.org
@@ -353,14 +353,14 @@ Corfu completion module
   :ensure t
   ;; Optional customizations
   :custom
-  (corfu-cycle t)                 ; Allows cycling through candidates
-  (corfu-auto t)                  ; Enable auto completion
+  (corfu-cycle t)
+  (corfu-auto t)
   (corfu-auto-prefix 2)
-  (corfu-auto-delay 0.8)
+  (corfu-auto-delay 0.0)
   (corfu-popupinfo-delay '(0.5 . 0.2))
-  (corfu-preview-current 'insert) ; insert previewed candidate
+  (corfu-preview-current 'insert)
   (corfu-preselect 'prompt)
-  (corfu-on-exact-match nil)      ; Don't auto expand tempel snippets
+  (corfu-on-exact-match nil)
   ;; Optionally use TAB for cycling, default is `corfu-complete'.
   :bind (:map corfu-map
               ("M-SPC"      . corfu-insert-separator)
@@ -374,7 +374,7 @@ Corfu completion module
   :init
   (global-corfu-mode)
   (corfu-history-mode)
-  (corfu-popupinfo-mode) ; Popup completion info
+  (corfu-popupinfo-mode)
   :config
   (add-hook 'eshell-mode-hook
             (lambda () (setq-local corfu-quit-at-boundary t
@@ -387,13 +387,10 @@ Corfu completion module
 #+begin_src emacs-lisp :tangle "config.el"
 (use-package cape
   :ensure t
-  :defer 10
-  :bind ("C-c f" . cape-file)
   :init
   ;; Add `completion-at-point-functions', used by `completion-at-point'.
-  ;; (defalias 'dabbrev-after-2 (cape-capf-prefix-length #'cape-dabbrev 2))
-  ;; (add-to-list 'completion-at-point-functions 'dabbrev-after-2 t)
-  (cl-pushnew #'cape-file completion-at-point-functions)
+  (add-to-list 'completion-at-point-functions #'cape-file)
+  (add-to-list 'completion-at-point-functions #'cape-dabbrev)
   :config
   ;; Silence then pcomplete capf, no errors or messages!
   (advice-add 'pcomplete-completions-at-point :around #'cape-wrap-silent)
