added emms to doom emacs to work with mpd

--- a/doom/.doom.d/README.org
+++ b/doom/.doom.d/README.org
@@ -80,6 +80,36 @@ git clone https://github.com/hlissner/doom-emacs ~/.emacs.d
       doom-variable-pitch-font (font-spec :family "JetBrainsMono NF" :size 12 :weight 'light))
 #+end_src
 
+*** EMMS
+#+begin_src emacs-lisp :tangle "config.el"
+;; Load all stable features in Emms
+(require 'emms-setup)
+(emms-all)
+
+;; MetaData reader about track information
+(require 'emms-info-native)
+(add-to-list 'emms-info-functions 'emms-info-native)
+
+;; Emms list of players
+(setq emms-player-list '(emms-player-mpd)) ;; or mpv
+(add-to-list 'emms-info-functions 'emms-info-mpd)
+
+;; MPD configuration
+(setq emms-player-mpd-server-name "localhost")
+(setq emms-player-mpd-server-port "6600")
+
+;; Music directory
+(setq emms-source-file-default-directory "~/Music")
+
+;; APE / FLAC commands
+(require 'emms-cue)
+(add-to-list 'emms-info-functions 'emms-info-cueinfo)
+
+;; Keybindings
+(global-set-key (kbd "C-c C-o") #'emms-smart-browse)
+(global-set-key (kbd "C-c C-r") #'emms-player-mpd-update-all-reset-cache)
+#+end_src
+
 *** ELLAMA
 #+begin_src emacs-lisp :tangle "config.el"
 ;; (use-package ellama
@@ -642,7 +672,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
 
        :app
        ;;calendar
-       ;;emms
+       emms
        ;;everywhere        ; *leave* Emacs!? You must be joking
        ;;irc               ; how neckbeards socialize
        (rss +org)        ; emacs as an RSS reader
