--- a/doom/.doom.d/README.org
+++ b/doom/.doom.d/README.org
@@ -87,8 +87,12 @@ git clone https://github.com/hlissner/doom-emacs ~/.emacs.d
 (emms-all)
 
 ;; MetaData reader about track information
-(require 'emms-info-native)
-(add-to-list 'emms-info-functions 'emms-info-native)
+;; (require 'emms-info-native)
+;; (add-to-list 'emms-info-functions 'emms-info-native)
+
+;; MetaData reader about track information
+(require 'emms-info-libtag)
+(add-to-list 'emms-info-functions 'emms-info-libtag)
 
 ;; Emms list of players
 (setq emms-player-list '(emms-player-mpd)) ;; or mpv
@@ -105,9 +109,17 @@ git clone https://github.com/hlissner/doom-emacs ~/.emacs.d
 (require 'emms-cue)
 (add-to-list 'emms-info-functions 'emms-info-cueinfo)
 
+;; Show cover art
+(setq emms-show-format "♪ %s")
+(setq emms-browser-covers 'emms-browser-cache-thumbnail)
+(setq emms-browser-covers-file-name-format "cover.jpg")
+
 ;; Keybindings
 (global-set-key (kbd "C-c C-o") #'emms-smart-browse)
 (global-set-key (kbd "C-c C-r") #'emms-player-mpd-update-all-reset-cache)
+
+;; Automatically update MPD database on startup
+(add-hook 'after-init-hook #'emms-player-mpd-update-all-reset-cache)
 #+end_src
 
 *** ELLAMA
@@ -467,25 +479,22 @@ RSS reader for ~Emacs~
 #+end_src
 
 The ~+org~ module flag in my ~init.el~ allows the use of ~org-mode~ to configure RSS feeds. The following is an example of ~elfeed.org~ in my ~{org-directory}/elfeed.org~ directory.
-        #+begin_example
+#+begin_example
 #+title: ELFEED
-
 * ROOT :elfeed:
 ** PROGRAMMING :programming:
 *** [[https://this-week-in-rust.org/rss.xml][This Week in Rust]] :rust:
 
 ** CYBERSECURITY :cybersecurity:
-*** [[https://feeds.feedburner.com/TheHackersNews][Cybersecurity News Platform]]
-*** [[https://www.wiz.io/feed/rss.xml][Wiz Blog]]
+*** [[https://feeds.feedburner.com/TheHackersNews][Cybersecurity News Platform]] :hackernews:
+*** [[https://www.wiz.io/feed/rss.xml][Wiz Blog]] :wiz:
 
 ** TECHNOLOGY :technology:
-*** [[https://hackernoon.com/feed][HackerNoon - Read, Write & Learn About Technology]]
+*** [[https://hackernoon.com/feed][HackerNoon - Read, Write & Learn About Technology]] :hackernoon:
 
 ** FOSS :foss:
 *** [[https://itsfoss.com/rss/][It's FOSS]]
 #+end_example
-
-
 
 
 -----
